# house_price_estimator

./: .env_template  .gitignore  README.md  SQL_Table_Values.sql  api.py  api.yaml  data.json  domain_scraper.py  domain_scraper_2.py  evaluation.md  houses_houses.sql  machine_learning_predictor.py  main.py  main_script.py  mypy.ini  price_estimator.py  pyproject.toml  requirements.txt  restAPI.py  restapi.yaml  sql_interpreter.py  sql_setup.py  suburbeducation.py  suburbs_postcodes.json  suburbscores.py  tests.py
ReferenceData/: suburbcrime.csv  suburbcrime.py  suburbs_postcodes.json
house_price_estimator/: domain_scraper_2.py  evaluation.md  main_script.py  sql_interpreter.py
house_price_estimator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
house_price_estimator/ReferenceData/: suburbs_postcodes.json
house_price_estimator/setupScripts/: sql_setup.py  suburb_postcode_generator.py  suburbs.txt
setupScripts/: data.json  domain_scraper_2.py  sql_interpreter.py  sql_setup.py  suburb_postcode_generator.py
tests/: test_domain_scraper_2.py  test_sql_interpreter.py  test_suburbscores.py
